--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Contact Us | Logistics Co.</title>
+  <title>Contact Us | EVS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
 
@@ -65,7 +65,7 @@
 <header  id="mainHeader" class="bg-transparent shadow-sm sticky top-0 z-50 w-full" style="position: fixed;">
   <div class="w-full px-4 md:px-48 py-6 flex items-center">
     
-    <a href="index.html" class="text-xl font-bold text-[#005EB8]">LogisticsCo</a>
+    <a href="index.html" class="text-xl font-bold text-[#005EB8]">EVS</a>
 
 <div class="hidden md:flex items-center space-x-8 font-medium ml-auto nav-wrapper text-white">
       <nav class="flex space-x-8">
@@ -122,7 +122,7 @@
 <div class="w-20 h-[0.1rem] bg-[#F0C479] mb-6"></div>
     <h2 class="text-3xl text-[#005EB8] mb-4 font-semibold">About Our Logistics Company</h2>
     <p class="text-gray-700 leading-relaxed">
-      At <strong>LogisticsCo</strong>, we specialize in providing efficient and reliable transportation, cargo handling, import/export solutions and customs support. 
+      At <strong>EVS</strong>, we specialize in providing efficient and reliable transportation, cargo handling, import/export solutions and customs support. 
       With years of experience in the logistics industry, our goal is to simplify global shipping, whether it's FMCG, garments, spices or machinery.
     </p>
     <p class="text-gray-700 mt-4">
@@ -201,7 +201,7 @@
   <div class="max-w-7xl mx-auto px-6 py-20 grid grid-cols-1 md:grid-cols-4 gap-8 gap-y-6 text-sm" style="line-height: 2rem;">
     
     <div>
-      <h2 class="text-2xl font-bold mb-2">LogisticsCo</h2>
+      <h2 class="text-2xl font-bold mb-2">EVS</h2>
       <p>We simplify cargo, import/export, and logistics operations worldwide with efficiency and care.</p>
     </div>
 
@@ -259,12 +259,12 @@
   <span class="inline-block min-w-[45px]"></span> +91 8129033332
 </p>
 
-      <p class="mt-2">Email: support@logisticsco.com</p>
+      <p class="mt-2">Email: support@EVS.com</p>
     </div>
   </div>
 
   <div class="border-t border-white mt-4 py-4 text-sm flex flex-col md:flex-row justify-between items-center px-6">
-    <p class="mb-2 md:mb-0">© 2025 LogisticsCo. All rights reserved.</p>
+    <p class="mb-2 md:mb-0">© 2025 EVS. All rights reserved.</p>
     <p>Powered by <span class="font-semibold">N-ME </span></p>
   </div>
 </footer>
