--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Contact Us | Logistics Co.</title>
+  <title>Contact Us | EVS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
 
@@ -96,7 +96,7 @@
 <header  id="mainHeader" class="bg-transparent shadow-sm sticky top-0 z-50 w-full" style="position: fixed;">
   <div class="w-full px-4 md:px-48 py-6 flex items-center">
     
-    <a href="index.html" class="text-xl font-bold text-primary">LogisticsCo</a>
+    <a href="index.html" class="text-xl font-bold text-primary">EVS</a>
 
 <div class="hidden md:flex items-center space-x-8 font-medium ml-auto nav-wrapper text-white">
       <nav class="flex space-x-8">
@@ -403,7 +403,7 @@
   <div class="max-w-7xl mx-auto px-6 py-20 grid grid-cols-1 md:grid-cols-4 gap-8 gap-y-6 text-sm" style="line-height: 2rem;">
     
     <div>
-      <h2 class="text-2xl font-bold mb-2">LogisticsCo</h2>
+      <h2 class="text-2xl font-bold mb-2">EVS</h2>
       <p>We simplify cargo, import/export, and logistics operations worldwide with efficiency and care.</p>
     </div>
 
@@ -461,12 +461,12 @@
   <span class="inline-block min-w-[45px]"></span> +91 8129033332
 </p>
 
-      <p class="mt-2">Email: support@logisticsco.com</p>
+      <p class="mt-2">Email: support@EVS.com</p>
     </div>
   </div>
 
   <div class="border-t border-white mt-4 py-4 text-sm flex flex-col md:flex-row justify-between items-center px-6">
-    <p class="mb-2 md:mb-0">© 2025 LogisticsCo. All rights reserved.</p>
+    <p class="mb-2 md:mb-0">© 2025 EVS. All rights reserved.</p>
     <p>Powered by <span class="font-semibold">N-ME </span></p>
   </div>
 </footer>
