--- a/services.html
+++ b/services.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Contact Us | Logistics Co.</title>
+  <title>Contact Us | EVS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
 
@@ -50,7 +50,7 @@
 
 <body class="relative text-gray-900 font-sans">
  
-  <div class="absolute inset-0 z-0">
+<div class="absolute inset-0 z-0">
     <img 
       src="./static/images/contactbg.jpg"
       class="w-full h-full object-cover opacity-[0.03] max-md:hidden block" 
@@ -65,7 +65,7 @@
 <header  id="mainHeader" class="bg-transparent shadow-sm sticky top-0 z-50 w-full" style="position: fixed;">
   <div class="w-full px-4 md:px-48 py-6 flex items-center">
     
-    <a href="index.html" class="text-xl font-bold text-[#005EB8]">LogisticsCo</a>
+    <a href="index.html" class="text-xl font-bold text-[#005EB8]">EVS</a>
 
 <div class="hidden md:flex items-center space-x-8 font-medium ml-auto nav-wrapper text-white">
       <nav class="flex space-x-8">
@@ -117,96 +117,115 @@
 
 
 
-
-<section class="bg-gray-50 py-16 px-6">
+<section class="relative z-10  py-16 px-6">
   <div class="max-w-7xl mx-auto text-center">
     <div class="text-center">
-  <p class="text-[#031A4C] uppercase tracking-widest mb-2 inline-block">What We Offer</p>
-  <div class="w-20 h-[2px] bg-[#F0C479] mb-6 mx-auto"></div>
-</div>
-
+      <p class="text-[#031A4C] uppercase tracking-widest mb-2 inline-block">What We Offer</p>
+      <div class="w-20 h-[2px] bg-[#F0C479] mb-6 mx-auto"></div>
+    </div>
 
     <h2 class="text-4xl font-semibold text-[#005EB8] mb-12">Our Services</h2>
 
-    <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-10">
-      <div class="bg-white  rounded-lg overflow-hidden group">
+     <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-10">
+      <div class="bg-white rounded-lg overflow-hidden group">
         <div class="overflow-hidden">
-          <img src="https://cdn.pixabay.com/photo/2017/01/29/15/21/container-2018508_640.jpg"alt="Import & Export" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
+          <img src="./static/images/custom.jpg" alt="Custom Clearance" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
         </div>
         <div class="p-6 text-left">
-          <h3 class="text-lg font-semibold mb-2">Cargo Transport</h3>
-          <p class="text-gray-600 text-sm mb-4">We ensure safe and timely cargo transportation globally through an efficient logistics chain.</p>
+          <h3 class="text-lg font-semibold mb-2">Custom Clearance</h3>
+          <p class="text-gray-600 text-sm mb-4">We manage all customs procedures, ensuring fast and hassle-free import/export clearance at global borders.</p>
           <button onclick="openModal('modal1')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:scale-105 transition-transform duration-300">Read More</button>
         </div>
       </div>
 
-      <div class="bg-white  rounded-lg overflow-hidden group">
+      <div class="bg-white rounded-lg overflow-hidden group">
         <div class="overflow-hidden">
-          <img src="https://cdn.pixabay.com/photo/2021/11/15/18/38/container-6799046_640.jpg" alt="Import & Export" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
+          <img src="./static/images/transportation.jpg" alt="Transportation" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
         </div>
         <div class="p-6 text-left">
-          <h3 class="text-lg font-semibold mb-2">Import & Export Handling</h3>
-          <p class="text-gray-600 text-sm mb-4">We manage the complexities of import/export logistics and documentation effectively.</p>
+          <h3 class="text-lg font-semibold mb-2">Transportation</h3>
+          <p class="text-gray-600 text-sm mb-4">Efficient and secure inland transportation services to deliver cargo swiftly across domestic and cross-border locations.</p>
           <button onclick="openModal('modal2')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:scale-105 transition-transform duration-300">Read More</button>
         </div>
       </div>
 
-      <div class="bg-white  rounded-lg overflow-hidden group">
+      <div class="bg-white rounded-lg overflow-hidden group">
         <div class="overflow-hidden">
-          <img src="https://cdn.pixabay.com/photo/2020/01/02/06/09/airport-4735067_640.jpg" alt="Duty Drawback" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
+          <img src="./static/images/warehouse.jpg" alt="Warehouse Handling" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
         </div>
         <div class="p-6 text-left">
-          <h3 class="text-lg font-semibold mb-2">Drawback & Refunds</h3>
-          <p class="text-gray-600 text-sm mb-4">We assist in recovering eligible customs duties and process refunds efficiently.</p>
+          <h3 class="text-lg font-semibold mb-2">Warehouse Handling</h3>
+          <p class="text-gray-600 text-sm mb-4">We offer modern warehousing with inventory control, storage solutions, and safe handling for every shipment.</p>
           <button onclick="openModal('modal3')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:scale-105 transition-transform duration-300">Read More</button>
         </div>
       </div>
 
-      <div class="bg-white  rounded-lg overflow-hidden group">
+      <div class="bg-white rounded-lg overflow-hidden group">
         <div class="overflow-hidden">
-          <img src="./static/images/cargo_insurance.jpeg" alt="Cargo Insurance" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
+          <img src="./static/images/freight.jpg" alt="Freight Forwarding" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
         </div>
         <div class="p-6 text-left">
-          <h3 class="text-lg font-semibold mb-2">Cargo Insurance</h3>
-          <p class="text-gray-600 text-sm mb-4">We offer comprehensive cargo insurance services to secure your shipments end-to-end.</p>
+          <h3 class="text-lg font-semibold mb-2">Freight Forwarding</h3>
+          <p class="text-gray-600 text-sm mb-4">We coordinate complete freight solutions across land and sea, managing logistics, documents, and cargo flow.</p>
           <button onclick="openModal('modal4')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:scale-105 transition-transform duration-300">Read More</button>
+        </div>
+      </div>
+
+      <div class="bg-white rounded-lg overflow-hidden group">
+        <div class="overflow-hidden">
+          <img src="./static/images/cargo.jpg" alt="Air Cargo" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
+        </div>
+        <div class="p-6 text-left">
+          <h3 class="text-lg font-semibold mb-2">Air Cargo</h3>
+          <p class="text-gray-600 text-sm mb-4">We provide fast, reliable air cargo solutions for urgent deliveries with full support and real-time tracking.</p>
+          <button onclick="openModal('modal5')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:scale-105 transition-transform duration-300">Read More</button>
         </div>
       </div>
     </div>
   </div>
+  </div>
 
   <div id="modal1" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
-    <div class="bg-white p-8 rounded  w-full max-w-md">
-      <h2 class="text-2xl font-bold mb-4">Cargo Transport</h2>
-      <p class="text-gray-700 text-sm mb-4">Our cargo transport services ensure smooth, efficient, and safe delivery of your goods worldwide using a trusted logistics network.</p>
+    <div class="bg-white p-8 rounded w-full max-w-md">
+      <h2 class="text-2xl font-bold mb-4">Custom Clearance</h2>
+      <p class="text-gray-700 text-sm mb-4">We simplify customs procedures and manage documentation to clear your cargo smoothly through borders.</p>
       <button onclick="closeModal('modal1')" class="mt-4 bg-[#005EB8] text-white px-4 py-2 rounded">Close</button>
     </div>
   </div>
 
   <div id="modal2" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
-    <div class="bg-white p-8 rounded  w-full max-w-md">
-      <h2 class="text-2xl font-bold mb-4">Import & Export Handling</h2>
-      <p class="text-gray-700 text-sm mb-4">We handle all import and export procedures including documentation, compliance, and coordination with international agents.</p>
+    <div class="bg-white p-8 rounded w-full max-w-md">
+      <h2 class="text-2xl font-bold mb-4">Transportation</h2>
+      <p class="text-gray-700 text-sm mb-4">From road to rail, our transportation services guarantee timely and secure movement of your cargo.</p>
       <button onclick="closeModal('modal2')" class="mt-4 bg-[#005EB8] text-white px-4 py-2 rounded">Close</button>
     </div>
   </div>
 
   <div id="modal3" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
-    <div class="bg-white p-8 rounded  w-full max-w-md">
-      <h2 class="text-2xl font-bold mb-4">Duty Drawback & Refund Settlement</h2>
-      <p class="text-gray-700 text-sm mb-4">We help clients recover eligible customs duties through duty drawback claims, processing them with precision and speed.</p>
+    <div class="bg-white p-8 rounded w-full max-w-md">
+      <h2 class="text-2xl font-bold mb-4">Warehouse Handling</h2>
+      <p class="text-gray-700 text-sm mb-4">We provide storage solutions with real-time tracking, inventory management, and flexible space options.</p>
       <button onclick="closeModal('modal3')" class="mt-4 bg-[#005EB8] text-white px-4 py-2 rounded">Close</button>
     </div>
   </div>
 
   <div id="modal4" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
-    <div class="bg-white p-8 rounded  w-full max-w-md">
-      <h2 class="text-2xl font-bold mb-4">Cargo Insurance</h2>
-      <p class="text-gray-700 text-sm mb-4">Protect your cargo against loss and damage during transportation with our reliable insurance options tailored for logistics businesses.</p>
+    <div class="bg-white p-8 rounded w-full max-w-md">
+      <h2 class="text-2xl font-bold mb-4">Freight Forwarding</h2>
+      <p class="text-gray-700 text-sm mb-4">Comprehensive logistics planning and coordination for import/export shipments across sea and land.</p>
       <button onclick="closeModal('modal4')" class="mt-4 bg-[#005EB8] text-white px-4 py-2 rounded">Close</button>
     </div>
   </div>
+
+  <div id="modal5" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
+    <div class="bg-white p-8 rounded w-full max-w-md">
+      <h2 class="text-2xl font-bold mb-4">Air Cargo</h2>
+      <p class="text-gray-700 text-sm mb-4">Quick and reliable air cargo shipping with end-to-end service, including customs and last-mile delivery.</p>
+      <button onclick="closeModal('modal5')" class="mt-4 bg-[#005EB8] text-white px-4 py-2 rounded">Close</button>
+    </div>
+  </div>
 </section>
+
 
 
 
@@ -226,7 +245,7 @@
   <div class="max-w-7xl mx-auto px-6 py-20 grid grid-cols-1 md:grid-cols-4 gap-8 gap-y-6 text-sm" style="line-height: 2rem;">
     
     <div>
-      <h2 class="text-2xl font-bold mb-2">LogisticsCo</h2>
+      <h2 class="text-2xl font-bold mb-2">EVS</h2>
       <p>We simplify cargo, import/export, and logistics operations worldwide with efficiency and care.</p>
     </div>
 
@@ -284,12 +303,12 @@
   <span class="inline-block min-w-[45px]"></span> +91 8129033332
 </p>
 
-      <p class="mt-2">Email: support@logisticsco.com</p>
+      <p class="mt-2">Email: support@EVS.com</p>
     </div>
   </div>
 
   <div class="border-t border-white mt-4 py-4 text-sm flex flex-col md:flex-row justify-between items-center px-6">
-    <p class="mb-2 md:mb-0">© 2025 LogisticsCo. All rights reserved.</p>
+    <p class="mb-2 md:mb-0">© 2025 EVS. All rights reserved.</p>
     <p>Powered by <span class="font-semibold">N-ME </span></p>
   </div>
 </footer>
