--- a/services2.html
+++ b/services2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Contact Us | Logistics Co.</title>
+  <title>Contact Us | EVS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
 
@@ -65,7 +65,7 @@
 <header  id="mainHeader" class="bg-transparent shadow-sm sticky top-0 z-50 w-full" style="position: fixed;">
   <div class="w-full px-4 md:px-48 py-6 flex items-center">
     
-    <a href="index.html" class="text-xl font-bold text-[#005EB8]">LogisticsCo</a>
+    <a href="index.html" class="text-xl font-bold text-[#005EB8]">EVS</a>
 
 <div class="hidden md:flex items-center space-x-8 font-medium ml-auto nav-wrapper text-white">
       <nav class="flex space-x-8">
@@ -124,47 +124,63 @@
     <div class="w-20 h-[2px] bg-[#F0C479] mb-6 mx-auto"></div>
     <h2 class="text-4xl font-semibold text-[#005EB8] mb-12">Our Services</h2>
 
+    <!-- Custom Clearance -->
     <div class="grid md:grid-cols-12 gap-8 mb-20 items-center">
       <div class="md:col-span-4">
-        <img src="https://cdn.pixabay.com/photo/2017/01/29/15/21/container-2018508_640.jpg" alt="Cargo" class="rounded-lg shadow-lg w-full h-auto" />
+        <img src="./static/images/custom.jpg" alt="Custom Clearance" class="rounded-lg shadow-lg w-full h-auto" />
       </div>
       <div class="md:col-span-8 bg-[#005EB8] text-white p-10 rounded-lg clip-polygon-right text-left">
-        <h3 class="text-3xl font-semibold mb-4">Cargo Transport</h3>
-        <p class="text-sm mb-4 leading-relaxed">Our cargo transport services ensure smooth, efficient, and safe delivery of your goods worldwide using a trusted logistics network. We use real-time tracking and optimized routes to minimize delay and reduce costs.</p>
-        <p class="text-sm leading-relaxed">We handle domestic and international cargo with tailored shipping plans, ensuring goods arrive in perfect condition. LogisticsCo partners with trusted carriers to provide reliability at every stage of your shipment.</p>
+        <h3 class="text-3xl font-semibold mb-4">Custom Clearance</h3>
+        <p class="text-sm mb-4 leading-relaxed">We manage all customs procedures, ensuring fast and hassle-free import/export clearance at global borders.</p>
+        <p class="text-sm leading-relaxed">Our team simplifies documentation and legal formalities for smooth cross-border logistics operations.</p>
       </div>
     </div>
 
+    <!-- Transportation -->
     <div class="grid md:grid-cols-12 gap-8 mb-20 items-center">
-<div class="md:col-span-8 bg-[#005EB8] text-white px-12 py-10 pl-16 rounded-lg clip-polygon-left text-left order-2 md:order-1">
-        <h3 class="text-3xl font-semibold mb-4">Import & Export Handling</h3>
-        <p class="text-sm mb-4 leading-relaxed">Navigating international trade can be complex, but our team simplifies it by handling documentation, customs clearance, and coordination with port authorities.</p>
-        <p class="text-sm leading-relaxed">We provide support from pre-shipment to post-delivery, ensuring compliance and seamless operations. LogisticsCo helps clients minimize risk and maximize efficiency in global trade.</p>
+      <div class="md:col-span-8 bg-[#005EB8] text-white px-12 py-10 pl-16 rounded-lg clip-polygon-left text-left order-2 md:order-1">
+        <h3 class="text-3xl font-semibold mb-4">Transportation</h3>
+        <p class="text-sm mb-4 leading-relaxed">Efficient and secure inland transportation services to deliver cargo swiftly across domestic and cross-border locations.</p>
+        <p class="text-sm leading-relaxed">We offer door-to-door logistics, tracking, and route optimization for every delivery need.</p>
       </div>
       <div class="md:col-span-4 order-1 md:order-2">
-        <img src="https://cdn.pixabay.com/photo/2021/11/15/18/38/container-6799046_640.jpg" alt="Export" class="rounded-lg shadow-lg w-full h-auto" />
+        <img src="./static/images/transportation.jpg" alt="Transportation" class="rounded-lg shadow-lg w-full h-auto" />
       </div>
     </div>
 
+    <!-- Warehouse Handling -->
     <div class="grid md:grid-cols-12 gap-8 mb-20 items-center">
       <div class="md:col-span-4">
-        <img src="https://cdn.pixabay.com/photo/2020/01/02/06/09/airport-4735067_640.jpg" alt="Drawback" class="rounded-lg shadow-lg w-full h-auto" />
+        <img src="./static/images/warehouse.jpg" alt="Warehouse Handling" class="rounded-lg shadow-lg w-full h-auto" />
       </div>
       <div class="md:col-span-8 bg-[#005EB8] text-white p-10 rounded-lg clip-polygon-right text-left">
-        <h3 class="text-3xl font-semibold mb-4">Drawback & Refunds</h3>
-        <p class="text-sm mb-4 leading-relaxed">Duty drawbacks and refund processes can be a challenge. Our experts assist in identifying eligible goods and compiling documentation for faster claim settlement.</p>
-        <p class="text-sm leading-relaxed">We have an in-depth understanding of customs law and ensure your business recovers every entitled rupee efficiently and on time.</p>
+        <h3 class="text-3xl font-semibold mb-4">Warehouse Handling</h3>
+        <p class="text-sm mb-4 leading-relaxed">We offer modern warehousing with inventory control, storage solutions, and safe handling for every shipment.</p>
+        <p class="text-sm leading-relaxed">Flexible storage options ensure optimal space utilization and secure environment for all cargo types.</p>
       </div>
     </div>
 
+    <!-- Freight Forwarding -->
+    <div class="grid md:grid-cols-12 gap-8 mb-20 items-center">
+      <div class="md:col-span-8 bg-[#005EB8] text-white px-12 py-10 pl-16 rounded-lg clip-polygon-left text-left order-2 md:order-1">
+        <h3 class="text-3xl font-semibold mb-4">Freight Forwarding</h3>
+        <p class="text-sm mb-4 leading-relaxed">We coordinate complete freight solutions across land and sea, managing logistics, documents, and cargo flow.</p>
+        <p class="text-sm leading-relaxed">From planning to delivery, our team ensures timely, cost-efficient, and smooth freight movement worldwide.</p>
+      </div>
+      <div class="md:col-span-4 order-1 md:order-2">
+        <img src="./static/images/freight.jpg" alt="Freight Forwarding" class="rounded-lg shadow-lg w-full h-auto" />
+      </div>
+    </div>
+
+    <!-- Air Cargo -->
     <div class="grid md:grid-cols-12 gap-8 items-center">
-<div class="md:col-span-8 bg-[#005EB8] text-white px-12 py-10 pl-16 rounded-lg clip-polygon-left text-left order-2 md:order-1">
-        <h3 class="text-3xl font-semibold mb-4">Cargo Insurance</h3>
-        <p class="text-sm mb-4 leading-relaxed">Protect your shipment from unforeseen risks. Our cargo insurance plans cover theft, damage, and loss during domestic and international transit.</p>
-        <p class="text-sm leading-relaxed">We offer tailored insurance options for all types of goods, ensuring peace of mind and business continuity no matter the journey.</p>
+      <div class="md:col-span-4">
+        <img src="./static/images/cargo.jpg" alt="Air Cargo" class="rounded-lg shadow-lg w-full h-auto" />
       </div>
-      <div class="md:col-span-4 order-1 md:order-2">
-        <img src="./static/images/cargo_insurance.jpeg" alt="Insurance" class="rounded-lg shadow-lg w-full h-auto" />
+      <div class="md:col-span-8 bg-[#005EB8] text-white p-10 rounded-lg clip-polygon-right text-left">
+        <h3 class="text-3xl font-semibold mb-4">Air Cargo</h3>
+        <p class="text-sm mb-4 leading-relaxed">We provide fast, reliable air cargo solutions for urgent deliveries with full support and real-time tracking.</p>
+        <p class="text-sm leading-relaxed">Backed by a strong network, our air freight services ensure timely dispatch and delivery every time.</p>
       </div>
     </div>
 
@@ -186,11 +202,12 @@
 
 
 
+
 <footer class="bg-[#005EB8] text-white">
   <div class="max-w-7xl mx-auto px-6 py-20 grid grid-cols-1 md:grid-cols-4 gap-8 gap-y-6 text-sm" style="line-height: 2rem;">
     
     <div>
-      <h2 class="text-2xl font-bold mb-2">LogisticsCo</h2>
+      <h2 class="text-2xl font-bold mb-2">EVS</h2>
       <p>We simplify cargo, import/export, and logistics operations worldwide with efficiency and care.</p>
     </div>
 
@@ -248,12 +265,12 @@
   <span class="inline-block min-w-[45px]"></span> +91 8129033332
 </p>
 
-      <p class="mt-2">Email: support@logisticsco.com</p>
+      <p class="mt-2">Email: support@EVS.com</p>
     </div>
   </div>
 
   <div class="border-t border-white mt-4 py-4 text-sm flex flex-col md:flex-row justify-between items-center px-6">
-    <p class="mb-2 md:mb-0">© 2025 LogisticsCo. All rights reserved.</p>
+    <p class="mb-2 md:mb-0">© 2025 EVS. All rights reserved.</p>
     <p>Powered by <span class="font-semibold">N-ME </span></p>
   </div>
 </footer>
