--- a/contact.html
+++ b/contact.html
@@ -130,20 +130,25 @@
 
     <div class=" min-h-[500px] space-y-4 pt-2 ">
       <h2 class="text-xl font-semibold text-[#005EB8]">Contact Details</h2>
-      <p><strong>Address:</strong> 123 Logistic Street, Kochi, Kerala, India</p>
+<p>
+  <strong>Address:</strong> Door No.60/17/A-5 Peter's Enclave, opp.<br>
+  <span style="display: inline-block; margin-left: 75px;">
+    Kairali Apartments Kochi, Kerala
+  </span>
+</p>
      <div>
-  <p>
-    <strong class="inline-block w-16">Phone:</strong> +91 8129033332<br>
-    <span class="inline-block w-16"></span> +91 8589961888
-  </p>
+ <p>
+  <strong class="inline-block w-20">Phone:</strong> +91 8129033332<br>
+  <span class="inline-block w-20"></span> +91 8589961888<br>
+  <span class="inline-block w-20"></span> +91 4842320046
+</p>
+
 </div>
 
-      <p><strong>Email:</strong> support@EVS.com</p>
+      <!-- <p><strong>Email:</strong> support@EVS.com</p> -->
       <p><strong>Working Hours:</strong> Mon – Sat: 9:00 AM – 6:00 PM</p>
       <div class="mt-4 w-full">
-        <iframe class="w-full h-64" style="border:0;" loading="lazy"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3930.023024584082!2d76.29988461531744!3d9.981635576331494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b08720a9643db0f%3A0x8f3cf8f74ed7cb98!2sKochi%2C%20Kerala!5e0!3m2!1sen!2sin!4v1718187883886!5m2!1sen!2sin">
-        </iframe>
+       <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d62875.909979236996!2d76.22069994863278!3d9.955213700000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s%20Door%20No.60%2F17%2FA-5%20Peter&#39;s%20Enclave%2C%20opp.%20%20%20%20Kairali%20Apartments%20Kochi%2C%20Kerala!5e0!3m2!1sen!2sin!4v1750151383968!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
   </div>
@@ -206,13 +211,14 @@
 
     <div>
       <h3 class="font-semibold text-lg mb-3">Contact Info</h3>
-      <p>123 Logistic Street,<br>Kochi, Kerala, India</p>
+      <p>Door No.60/17/A-5 Peter's Enclave,opp.<br>Kairali Aprtments Kochi , Kerala</p>
       <p class="mt-2">
   <span class="inline-block min-w-[45px] font-semibold">Phone:</span> +91 8589961888<br>
-  <span class="inline-block min-w-[45px]"></span> +91 8129033332
+  <span class="inline-block min-w-[45px]"></span> +91 8129033332<br>
+  <span class="inline-block min-w-[45px]"></span> +91 4842320046
 </p>
 
-      <p class="mt-2">Email: support@EVS.com</p>
+      <!-- <p class="mt-2">Email: support@EVS.com</p> -->
     </div>
   </div>
 
@@ -222,7 +228,7 @@
   </div>
 </footer>
 
-<a href="https://wa.me/918589961888" target="_blank" class="fixed bottom-4 right-4 z-50">
+<a href="https://wa.me/918589961888" target="_blank" class="fixed bottom-4 right-4 z-50 mb-10">
   <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 256 258"
     class="w-12 h-12 hover:scale-110 transition-transform duration-300">
     <defs>
