--- a/services.html
+++ b/services.html
@@ -134,7 +134,7 @@
         <div class="p-6 text-left">
           <h3 class="text-lg font-semibold mb-2">Custom Clearance</h3>
           <p class="text-gray-600 text-sm mb-4">We manage all customs procedures, ensuring fast and hassle-free import/export clearance at global borders.</p>
-          <button onclick="openModal('modal1')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:scale-105 transition-transform duration-300">Read More</button>
+          <button onclick="openModal('modal1')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
         </div>
       </div>
 
@@ -145,7 +145,7 @@
         <div class="p-6 text-left">
           <h3 class="text-lg font-semibold mb-2">Transportation</h3>
           <p class="text-gray-600 text-sm mb-4">Efficient and secure inland transportation services to deliver cargo swiftly across domestic and cross-border locations.</p>
-          <button onclick="openModal('modal2')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:scale-105 transition-transform duration-300">Read More</button>
+          <button onclick="openModal('modal2')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
         </div>
       </div>
 
@@ -156,7 +156,7 @@
         <div class="p-6 text-left">
           <h3 class="text-lg font-semibold mb-2">Warehouse Handling</h3>
           <p class="text-gray-600 text-sm mb-4">We offer modern warehousing with inventory control, storage solutions, and safe handling for every shipment.</p>
-          <button onclick="openModal('modal3')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:scale-105 transition-transform duration-300">Read More</button>
+          <button onclick="openModal('modal3')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
         </div>
       </div>
 
@@ -167,7 +167,7 @@
         <div class="p-6 text-left">
           <h3 class="text-lg font-semibold mb-2">Freight Forwarding</h3>
           <p class="text-gray-600 text-sm mb-4">We coordinate complete freight solutions across land and sea, managing logistics, documents, and cargo flow.</p>
-          <button onclick="openModal('modal4')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:scale-105 transition-transform duration-300">Read More</button>
+          <button onclick="openModal('modal4')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
         </div>
       </div>
 
@@ -178,7 +178,7 @@
         <div class="p-6 text-left">
           <h3 class="text-lg font-semibold mb-2">Air Cargo</h3>
           <p class="text-gray-600 text-sm mb-4">We provide fast, reliable air cargo solutions for urgent deliveries with full support and real-time tracking.</p>
-          <button onclick="openModal('modal5')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:scale-105 transition-transform duration-300">Read More</button>
+          <button onclick="openModal('modal5')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
         </div>
       </div>
     </div>
@@ -297,13 +297,14 @@
 
     <div>
       <h3 class="font-semibold text-lg mb-3">Contact Info</h3>
-      <p>123 Logistic Street,<br>Kochi, Kerala, India</p>
+      <p>Door No.60/17/A-5 Peter's Enclave,opp.<br>Kairali Aprtments Kochi , Kerala</p>
       <p class="mt-2">
   <span class="inline-block min-w-[45px] font-semibold">Phone:</span> +91 8589961888<br>
-  <span class="inline-block min-w-[45px]"></span> +91 8129033332
+  <span class="inline-block min-w-[45px]"></span> +91 8129033332<br>
+  <span class="inline-block min-w-[45px]"></span> +91 4842320046
 </p>
 
-      <p class="mt-2">Email: support@EVS.com</p>
+      <!-- <p class="mt-2">Email: support@EVS.com</p> -->
     </div>
   </div>
 
@@ -313,7 +314,7 @@
   </div>
 </footer>
 
-<a href="https://wa.me/918589961888" target="_blank" class="fixed bottom-4 right-4 z-50">
+<a href="https://wa.me/918589961888" target="_blank" class="fixed bottom-4 right-4 z-50 mb-10">
   <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 256 258"
     class="w-12 h-12 hover:scale-110 transition-transform duration-300">
     <defs>
