--- a/services2.html
+++ b/services2.html
@@ -202,7 +202,6 @@
 
 
 
-
 <footer class="bg-[#005EB8] text-white">
   <div class="max-w-7xl mx-auto px-6 py-20 grid grid-cols-1 md:grid-cols-4 gap-8 gap-y-6 text-sm" style="line-height: 2rem;">
     
@@ -259,13 +258,14 @@
 
     <div>
       <h3 class="font-semibold text-lg mb-3">Contact Info</h3>
-      <p>123 Logistic Street,<br>Kochi, Kerala, India</p>
+      <p>Door No.60/17/A-5 Peter's Enclave,opp.<br>Kairali Aprtments Kochi , Kerala</p>
       <p class="mt-2">
   <span class="inline-block min-w-[45px] font-semibold">Phone:</span> +91 8589961888<br>
-  <span class="inline-block min-w-[45px]"></span> +91 8129033332
+  <span class="inline-block min-w-[45px]"></span> +91 8129033332<br>
+  <span class="inline-block min-w-[45px]"></span> +91 4842320046
 </p>
 
-      <p class="mt-2">Email: support@EVS.com</p>
+      <!-- <p class="mt-2">Email: support@EVS.com</p> -->
     </div>
   </div>
 
@@ -275,7 +275,7 @@
   </div>
 </footer>
 
-<a href="https://wa.me/918589961888" target="_blank" class="fixed bottom-4 right-4 z-50">
+<a href="https://wa.me/918589961888" target="_blank" class="fixed bottom-4 right-4 z-50 mb-10">
   <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 256 258"
     class="w-12 h-12 hover:scale-110 transition-transform duration-300">
     <defs>
