--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 
     <div>
       <h3 class="font-semibold text-lg mb-3">Contact Info</h3>
-      <p>Door No.60/17/A-5 Peter's Enclave,opp.<br>Kairali Aprtments Kochi , Kerala</p>
+      <p>Door No.60/17/A-5 Peter's Enclave,opp.<br>Kairali Apartments Kochi , Kerala</p>
       <p class="mt-2">
   <span class="inline-block min-w-[45px] font-semibold">Phone:</span> +91 8589961888<br>
   <span class="inline-block min-w-[45px]"></span> +91 8129033332<br>
