--- a/contact.html
+++ b/contact.html
@@ -147,9 +147,9 @@
 
       <!-- <p><strong>Email:</strong> support@EVS.com</p> -->
       <p><strong>Working Hours:</strong> Mon – Sat: 9:00 AM – 6:00 PM</p>
-      <div class="mt-4 w-full">
-       <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d62875.909979236996!2d76.22069994863278!3d9.955213700000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s%20Door%20No.60%2F17%2FA-5%20Peter&#39;s%20Enclave%2C%20opp.%20%20%20%20Kairali%20Apartments%20Kochi%2C%20Kerala!5e0!3m2!1sen!2sin!4v1750151383968!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
+      <div class="mt-4 w-full ">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62875.909979236996!2d76.22069994863278!3d9.955213700000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0872c0fb8099df%3A0x117bf1724cadb899!2sKairali%20Apartments!5e0!3m2!1sen!2sin!4v1750152048212!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="cursor-pointer"></iframe>      
+
     </div>
   </div>
 </main>
