--- a/contact.html
+++ b/contact.html
@@ -148,7 +148,16 @@
       <!-- <p><strong>Email:</strong> support@EVS.com</p> -->
       <p><strong>Working Hours:</strong> Mon – Sat: 9:00 AM – 6:00 PM</p>
       <div class="mt-4 w-full ">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.369289039993!2d76.27249057450834!3d9.98632277327101!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b080d59a4e35737%3A0x765dbd1295976f70!2sHigh%20Court%20of%20Kerala%20%26%20Lakshadweep!5e0!3m2!1sen!2sin!4v1750152404603!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62875.909979236996!2d76.22069994863278!3d9.955213700000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0872c0fb8099df%3A0x117bf1724cadb899!2sKairali%20Apartments!5e0!3m2!1sen!2sin!4v1750152048212"
+  width="600"
+  height="450"
+  style="border:0;"
+  allowfullscreen=""
+  loading="lazy"
+  referrerpolicy="no-referrer-when-downgrade">
+</iframe>
+
     </div>
   </div>
 </main>
