--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
 <header  id="mainHeader" class="bg-transparent shadow-sm sticky top-0 z-50 w-full" style="position: fixed;">
   <div class="w-full px-4 md:px-48 py-6 flex items-center">
     
-    <a href="index.html" class="text-xl font-bold text-primary">EVS</a>
+    <a href="index.html">
+  <img src="./static/images/logo1.png" alt="EVS Logo" class="h-12 w-auto">
+</a>
+
 
 <div class="hidden md:flex items-center space-x-8 font-medium ml-auto nav-wrapper text-white">
       <nav class="flex space-x-8">
@@ -132,7 +135,7 @@
     <div id="slidesContainer" class="relative w-full h-full overflow-hidden">
       <div class="absolute inset-0 slide" id="slide1">
         <img src="./static/images/view-luxurious-cruise-ship.jpg" class="w-full h-full object-cover zoom-in" />
-        <div class="absolute inset-0 bg-black bg-opacity-50"></div>
+        <div class="absolute inset-0 bg-black bg-opacity-80"></div>
         <div class="absolute left-10 top-1/2 transform -translate-y-1/2 text-white  md:px-44 z-10">
           <h2 class="text-[3rem] md:text-[5.5rem] font-bold leading-none slide-in-left mb-10">Your Cargo,<br>Our Ocean Journey</h2>
           <p class="text-lg md:text-xl text-white mb-6 slide-in-bottom">
@@ -148,7 +151,7 @@
 
       <div class="absolute inset-0 slide hidden" id="slide2">
         <img src="./static/images/vehicle-move.jpg" class="w-full h-full object-cover zoom-in" />
-        <div class="absolute inset-0 bg-black bg-opacity-50"></div>
+        <div class="absolute inset-0 bg-black bg-opacity-80"></div>
         <div class="absolute left-10 top-1/2 transform -translate-y-1/2 text-white md:px-44 z-10">
           <h2 class="text-[3rem] md:text-[5.5rem] font-bold leading-none slide-in-left mb-10">Truck Freight<br>Across Every Highway</h2>
           <p class="text-lg md:text-xl text-white mb-6 slide-in-bottom">
@@ -164,7 +167,7 @@
 
       <div class="absolute inset-0 slide hidden" id="slide3">
         <img src="./static/images/transport-logistics-concept.jpg" class="w-full h-full object-cover zoom-in" />
-        <div class="absolute inset-0 bg-black bg-opacity-50"></div>
+        <div class="absolute inset-0 bg-black bg-opacity-80"></div>
         <div class="absolute left-10 top-1/2 transform -translate-y-1/2 text-white  md:px-44 z-10">
           <h2 class="text-[3rem] md:text-[5.5rem] font-bold leading-none slide-in-left mb-10">Fast,<br> Safe Global Air <br>Delivery</h2>
           <p class="text-lg md:text-xl text-white mb-6 slide-in-bottom">
@@ -455,7 +458,7 @@
 
     <div>
       <h3 class="font-semibold text-lg mb-3">Contact Info</h3>
-      <p>Door No.60/17/A-5 Peter's Enclave,opp.<br>Kairali Apartments Kochi , Kerala</p>
+      <p>Door No.60/17/A-5 Peter's Enclave, <br>opp.Kairali Apartments <br> Kochi , Kerala</p>
       <p class="mt-2">
   <span class="inline-block min-w-[45px] font-semibold">Phone:</span> +91 8589961888<br>
   <span class="inline-block min-w-[45px]"></span> +91 8129033332<br>
