--- a/services.html
+++ b/services.html
@@ -65,8 +65,9 @@
 <header  id="mainHeader" class="bg-transparent shadow-sm sticky top-0 z-50 w-full" style="position: fixed;">
   <div class="w-full px-4 md:px-48 py-6 flex items-center">
     
-    <a href="index.html" class="text-xl font-bold text-[#005EB8]">EVS</a>
-
+<a href="index.html">
+  <img src="./static/images/logo1.png" alt="EVS Logo" class="h-12 w-auto">
+</a>
 <div class="hidden md:flex items-center space-x-8 font-medium ml-auto nav-wrapper text-white">
       <nav class="flex space-x-8">
         <a href="index.html" class="hover:text-[#005EB8]">Home</a>
@@ -95,7 +96,7 @@
 
 <div class="w-full min-h-[25rem] bg-black relative text-white px-[9.5rem] max-md:px-6 flex flex-col justify-center">
 
-  <div class="absolute inset-0 bg-cover bg-center opacity-60" style="background-image: url('./static/images/service.jpg');"></div>
+  <div class="absolute inset-0 bg-cover bg-center opacity-70" style="background-image: url('./static/images/service.jpg');"></div>
 
   
   <div class="relative z-10 flex flex-col items-center justify-center h-full space-y-2 text-center">
@@ -297,7 +298,7 @@
 
     <div>
       <h3 class="font-semibold text-lg mb-3">Contact Info</h3>
-      <p>Door No.60/17/A-5 Peter's Enclave,opp.<br>Kairali Apartments Kochi , Kerala</p>
+      <p>Door No.60/17/A-5 Peter's Enclave, <br>opp.Kairali Apartments <br> Kochi , Kerala</p>
       <p class="mt-2">
   <span class="inline-block min-w-[45px] font-semibold">Phone:</span> +91 8589961888<br>
   <span class="inline-block min-w-[45px]"></span> +91 8129033332<br>
