--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
   <span class="inline-block w-20"></span> +91 4842320046
 </p>
 <p>
-  <strong class="inline-block w-20">Email:</strong> info@cybexel.com</p>
+  <strong class="inline-block w-20">Email:</strong> info@evslogistics.in</p>
 </div>
 
       <!-- <p><strong>Email:</strong> support@EVS.com</p> -->
@@ -234,7 +234,7 @@
   <span class="inline-block min-w-[45px]"></span> +91 4842320046
 </p>
 
-      <p class="mt-2">Email: info@cybexel.com</p>
+      <p class="mt-2">Email: info@evslogistics.in</p>
     </div>
   </div>
 
