--- a/about.html
+++ b/about.html
@@ -261,7 +261,7 @@
   <span class="inline-block min-w-[45px]"></span> +91 4842320046
 </p>
 
-      <p class="mt-2">Email: info@cybexel.com</p>
+      <p class="mt-2">Email: info@evslogistics.in</p>
     </div>
   </div>
 
