--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@
   </div>
 
   <div class="grid grid-cols-1 md:grid-cols-2 gap-20 items-start max-md:gap-0">
-    <form action="https://formsubmit.co/darsanarajesh.nme@gmail.com" method="POST" class="relative z-10 space-y-4 min-h-[500px] pt-2 max-md:mb-[-4rem]">
+     <form action="https://formsubmit.co/info@evslogistics.in" method="POST" class="relative z-10 space-y-4 min-h-[500px] pt-2 max-md:mb-[-4rem]">
 <input type="hidden" name="_subject" value="New Contact Form Submission!">
   
   <input type="hidden" name="_captcha" value="false">
